Jay/src/main/java/com/jay/lang/JParser.java
package com.jay.lang;

// Generated from J.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
        T__9=10, T__10=11, AND=12, OR=13, BEGIN=14, END=15, PROGRAM=16, FUNCTION=17, 
        AS=18, RETURN=19, BREAK=20, CONTINUE=21, TO=22, NOT=23, IF=24, ELSE=25, 
        WHILE=26, FOR=27, STEP=28, THEN=29, VAR=30, TRUE=31, FALSE=32, TYPEOF=33, 
        DYNAMIC=34, IMPORT=35, NATIVE=36, CONST_TYPE=37, TYPE=38, COMPARE_OP=39, 
        CONST_INT=40, CONST_NATUAL_NO=41, CONST_FLOAT=42, CONST_STRING=43, CONST_NORMAL_STRING=44, 
        CONST_CHAR_STRING=45, POSITIVE_DIGIT=46, DIGIT=47, ID=48, COMMENT=49, 
        LINE_COMMENT=50, WS=51;
    public static final int
        RULE_program = 0, RULE_import_list = 1, RULE_imports = 2, RULE_function_list = 3, 
        RULE_function = 4, RULE_statement_list = 5, RULE_statement = 6, RULE_expression = 7, 
        RULE_add_expression = 8, RULE_mult_expression = 9, RULE_term = 10, RULE_or_expression = 11, 
        RULE_and_expression = 12, RULE_bool_term = 13, RULE_assignment_list = 14, 
        RULE_assignment = 15, RULE_expression_list = 16, RULE_id_list = 17, RULE_function_call = 18;
    public static final String[] ruleNames = {
        "program", "import_list", "imports", "function_list", "function", "statement_list", 
        "statement", "expression", "add_expression", "mult_expression", "term", 
        "or_expression", "and_expression", "bool_term", "assignment_list", "assignment", 
        "expression_list", "id_list", "function_call"
    };

    private static final String[] _LITERAL_NAMES = {
        null, "'('", "')'", "'['", "']'", "'='", "'+'", "'-'", "'*'", "'/'", "','", 
        "'[]'", null, null, "'begin'", "'end'", "'program'", "'function'", "'as'", 
        "'return'", "'break'", "'continue'", "'to'", null, "'if'", "'else'", "'while'", 
        "'for'", "'step'", "'then'", "'var'", "'true'", "'false'", "'typeof'", 
        "'dynamic'", "'import'", "'native'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
        null, null, null, null, null, null, null, null, null, null, null, null, 
        "AND", "OR", "BEGIN", "END", "PROGRAM", "FUNCTION", "AS", "RETURN", "BREAK", 
        "CONTINUE", "TO", "NOT", "IF", "ELSE", "WHILE", "FOR", "STEP", "THEN", 
        "VAR", "TRUE", "FALSE", "TYPEOF", "DYNAMIC", "IMPORT", "NATIVE", "CONST_TYPE", 
        "TYPE", "COMPARE_OP", "CONST_INT", "CONST_NATUAL_NO", "CONST_FLOAT", "CONST_STRING", 
        "CONST_NORMAL_STRING", "CONST_CHAR_STRING", "POSITIVE_DIGIT", "DIGIT", 
        "ID", "COMMENT", "LINE_COMMENT", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "J.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public JParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }
    public static class ProgramContext extends ParserRuleContext {
        public Import_listContext import_list() {
            return getRuleContext(Import_listContext.class,0);
        }
        public TerminalNode PROGRAM() { return getToken(JParser.PROGRAM, 0); }
        public TerminalNode ID() { return getToken(JParser.ID, 0); }
        public List<FunctionContext> function() {
            return getRuleContexts(FunctionContext.class);
        }
        public FunctionContext function(int i) {
            return getRuleContext(FunctionContext.class,i);
        }
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }
        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class,i);
        }
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_program; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterProgram(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitProgram(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(40);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if (_la==PROGRAM) {
                {
                setState(38);
                match(PROGRAM);
                setState(39);
                match(ID);
                }
            }

            setState(42);
            import_list();
            setState(45); 
            _errHandler.sync(this);
            _la = _input.LA(1);
            do {
                {
                setState(45);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                case FUNCTION:
                    {
                    setState(43);
                    function();
                    }
                    break;
                case RETURN:
                case BREAK:
                case CONTINUE:
                case IF:
                case WHILE:
                case FOR:
                case VAR:
                case TYPEOF:
                case DYNAMIC:
                case NATIVE:
                case CONST_TYPE:
                case ID:
                    {
                    setState(44);
                    statement();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
                }
                }
                setState(47); 
                _errHandler.sync(this);
                _la = _input.LA(1);
            } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << RETURN) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << VAR) | (1L << TYPEOF) | (1L << DYNAMIC) | (1L << NATIVE) | (1L << CONST_TYPE) | (1L << ID))) != 0) );
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Import_listContext extends ParserRuleContext {
        public List<ImportsContext> imports() {
            return getRuleContexts(ImportsContext.class);
        }
        public ImportsContext imports(int i) {
            return getRuleContext(ImportsContext.class,i);
        }
        public Import_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_import_list; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterImport_list(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitImport_list(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitImport_list(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Import_listContext import_list() throws RecognitionException {
        Import_listContext _localctx = new Import_listContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_import_list);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(52);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la==IMPORT) {
                {
                {
                setState(49);
                imports();
                }
                }
                setState(54);
                _errHandler.sync(this);
                _la = _input.LA(1);
            }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ImportsContext extends ParserRuleContext {
        public Token file;
        public TerminalNode IMPORT() { return getToken(JParser.IMPORT, 0); }
        public TerminalNode CONST_STRING() { return getToken(JParser.CONST_STRING, 0); }
        public ImportsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_imports; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterImports(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitImports(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitImports(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ImportsContext imports() throws RecognitionException {
        ImportsContext _localctx = new ImportsContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_imports);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(55);
            match(IMPORT);
            setState(56);
            ((ImportsContext)_localctx).file = match(CONST_STRING);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Function_listContext extends ParserRuleContext {
        public List<FunctionContext> function() {
            return getRuleContexts(FunctionContext.class);
        }
        public FunctionContext function(int i) {
            return getRuleContext(FunctionContext.class,i);
        }
        public Function_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_function_list; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterFunction_list(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitFunction_list(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitFunction_list(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Function_listContext function_list() throws RecognitionException {
        Function_listContext _localctx = new Function_listContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_function_list);
        int _la;
        try {
            setState(64);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
            case FUNCTION:
                enterOuterAlt(_localctx, 1);
                {
                setState(59); 
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                    {
                    setState(58);
                    function();
                    }
                    }
                    setState(61); 
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ( _la==FUNCTION );
                }
                break;
            case EOF:
                enterOuterAlt(_localctx, 2);
                {
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctionContext extends ParserRuleContext {
        public Token name;
        public Token r;
        public List<TerminalNode> FUNCTION() { return getTokens(JParser.FUNCTION); }
        public TerminalNode FUNCTION(int i) {
            return getToken(JParser.FUNCTION, i);
        }
        public Statement_listContext statement_list() {
            return getRuleContext(Statement_listContext.class,0);
        }
        public TerminalNode END() { return getToken(JParser.END, 0); }
        public TerminalNode ID() { return getToken(JParser.ID, 0); }
        public Id_listContext id_list() {
            return getRuleContext(Id_listContext.class,0);
        }
        public TerminalNode AS() { return getToken(JParser.AS, 0); }
        public TerminalNode CONST_TYPE() { return getToken(JParser.CONST_TYPE, 0); }
        public FunctionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_function; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterFunction(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitFunction(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitFunction(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FunctionContext function() throws RecognitionException {
        FunctionContext _localctx = new FunctionContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_function);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(66);
            match(FUNCTION);
            setState(67);
            ((FunctionContext)_localctx).name = match(ID);
            setState(68);
            match(T__0);
            setState(70);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if (_la==ID) {
                {
                setState(69);
                id_list();
                }
            }

            setState(72);
            match(T__1);
            setState(75);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if (_la==AS) {
                {
                setState(73);
                match(AS);
                setState(74);
                ((FunctionContext)_localctx).r = match(CONST_TYPE);
                }
            }

            setState(77);
            statement_list();
            setState(78);
            match(END);
            setState(79);
            match(FUNCTION);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Statement_listContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }
        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class,i);
        }
        public Statement_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_statement_list; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatement_list(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatement_list(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatement_list(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Statement_listContext statement_list() throws RecognitionException {
        Statement_listContext _localctx = new Statement_listContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_statement_list);
        int _la;
        try {
            setState(87);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
            case RETURN:
            case BREAK:
            case CONTINUE:
            case IF:
            case WHILE:
            case FOR:
            case VAR:
            case TYPEOF:
            case DYNAMIC:
            case NATIVE:
            case CONST_TYPE:
            case ID:
                enterOuterAlt(_localctx, 1);
                {
                setState(82); 
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                    {
                    setState(81);
                    statement();
                    }
                    }
                    setState(84); 
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << VAR) | (1L << TYPEOF) | (1L << DYNAMIC) | (1L << NATIVE) | (1L << CONST_TYPE) | (1L << ID))) != 0) );
                }
                break;
            case END:
            case ELSE:
                enterOuterAlt(_localctx, 2);
                {
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_statement; }
     
        public StatementContext() { }
        public void copyFrom(StatementContext ctx) {
            super.copyFrom(ctx);
        }
    }
    public static class StatementAssignmentContext extends StatementContext {
        public ExpressionContext i;
        public ExpressionContext v;
        public TerminalNode ID() { return getToken(JParser.ID, 0); }
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }
        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class,i);
        }
        public StatementAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementAssignment(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementAssignment(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementAssignment(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementContinueContext extends StatementContext {
        public TerminalNode CONTINUE() { return getToken(JParser.CONTINUE, 0); }
        public StatementContinueContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementContinue(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementContinue(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementContinue(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementReturnContext extends StatementContext {
        public TerminalNode RETURN() { return getToken(JParser.RETURN, 0); }
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public StatementReturnContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementReturn(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementReturn(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementReturn(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementForContext extends StatementContext {
        public List<TerminalNode> FOR() { return getTokens(JParser.FOR); }
        public TerminalNode FOR(int i) {
            return getToken(JParser.FOR, i);
        }
        public TerminalNode ID() { return getToken(JParser.ID, 0); }
        public TerminalNode TO() { return getToken(JParser.TO, 0); }
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class,0);
        }
        public TerminalNode THEN() { return getToken(JParser.THEN, 0); }
        public Statement_listContext statement_list() {
            return getRuleContext(Statement_listContext.class,0);
        }
        public TerminalNode END() { return getToken(JParser.END, 0); }
        public TerminalNode STEP() { return getToken(JParser.STEP, 0); }
        public TermContext term() {
            return getRuleContext(TermContext.class,0);
        }
        public StatementForContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementFor(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementFor(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementFor(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementDeclarationContext extends StatementContext {
        public Assignment_listContext assignment_list() {
            return getRuleContext(Assignment_listContext.class,0);
        }
        public TerminalNode CONST_TYPE() { return getToken(JParser.CONST_TYPE, 0); }
        public TerminalNode VAR() { return getToken(JParser.VAR, 0); }
        public StatementDeclarationContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementDeclaration(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementDeclaration(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementDeclaration(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementForAssignmentContext extends StatementContext {
        public List<TerminalNode> FOR() { return getTokens(JParser.FOR); }
        public TerminalNode FOR(int i) {
            return getToken(JParser.FOR, i);
        }
        public TerminalNode ID() { return getToken(JParser.ID, 0); }
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }
        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class,i);
        }
        public TerminalNode TO() { return getToken(JParser.TO, 0); }
        public TerminalNode THEN() { return getToken(JParser.THEN, 0); }
        public Statement_listContext statement_list() {
            return getRuleContext(Statement_listContext.class,0);
        }
        public TerminalNode END() { return getToken(JParser.END, 0); }
        public TerminalNode STEP() { return getToken(JParser.STEP, 0); }
        public TermContext term() {
            return getRuleContext(TermContext.class,0);
        }
        public StatementForAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementForAssignment(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementForAssignment(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementForAssignment(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementBreakContext extends StatementContext {
        public TerminalNode BREAK() { return getToken(JParser.BREAK, 0); }
        public StatementBreakContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementBreak(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementBreak(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementBreak(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementFunctionCallContext extends StatementContext {
        public Function_callContext function_call() {
            return getRuleContext(Function_callContext.class,0);
        }
        public StatementFunctionCallContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementFunctionCall(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementFunctionCall(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementFunctionCall(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementWhileContext extends StatementContext {
        public List<TerminalNode> WHILE() { return getTokens(JParser.WHILE); }
        public TerminalNode WHILE(int i) {
            return getToken(JParser.WHILE, i);
        }
        public Or_expressionContext or_expression() {
            return getRuleContext(Or_expressionContext.class,0);
        }
        public TerminalNode THEN() { return getToken(JParser.THEN, 0); }
        public Statement_listContext statement_list() {
            return getRuleContext(Statement_listContext.class,0);
        }
        public TerminalNode END() { return getToken(JParser.END, 0); }
        public StatementWhileContext(StatementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).enterStatementWhile(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JListener ) ((JListener)listener).exitStatementWhile(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JVisitor ) return ((JVisitor<? extends T>)visitor).visitStatementWhile(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class StatementIfContext extends StatementContext {
        public List<TerminalNode> IF() { return getTokens(JParser.IF); }
        public TerminalNode IF(int i) {
            return getToken(JParser.IF, i);
        }
        public List<Or_expressionContext> or_expression() {
            return getRuleContexts(Or_expressionContext.class);
        }
        public Or_expressionContext or_expression(int i) {
            return getRuleContext(Or_expressionContext.class,i);
        }
        public List<TerminalNode> THEN() { return getTokens(JParser.THEN); }
        public TerminalNode THEN(int i) {
            return getToken(JParser.THEN, i);
        }
        public List<Statement_listContext> statement_list() {
            return getRuleContexts(Statement_listContext.class);
        }
        public Statement_listContext statement_list(int i) {
            return getRuleContext(Statement_listContext.class,i);
        }
        public TerminalNode END() { return getToken(JParser.END, 0); }
